unpackaged/main/default/objects/AcctSeed__AP_Aging_History__c/fields/AcctSeed__Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Period__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Used to specify accounting period for financial reporting. Accounting period must have a value of "Open" in order to be selected.</inlineHelpText>
    <label>Accounting Period</label>
    <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
    <relationshipLabel>AP Aging History</relationshipLabel>
    <relationshipName>AP_Aging_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>