unpackaged/main/default/objects/AcctSeed__AP_Aging_History__c/fields/AcctSeed__Age__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Age__c</fullName>
    <formula>IF(AcctSeed__Days_Past_Due__c &lt;=0, "0-Current", 
IF(AND(AcctSeed__Days_Past_Due__c&gt;0,AcctSeed__Days_Past_Due__c&lt;=30),"1-30 Days", 
IF(AND(AcctSeed__Days_Past_Due__c&gt;30,AcctSeed__Days_Past_Due__c&lt;=60),"31-60 Days", 
IF(AND(AcctSeed__Days_Past_Due__c&gt;60,AcctSeed__Days_Past_Due__c&lt;=90),"61-90 Days", 
IF(AcctSeed__Days_Past_Due__c&gt;90,"Over 90 Days", 
"")))))</formula>
    <inlineHelpText>Denotes the age of the account payable for the given accounting period.</inlineHelpText>
    <label>Age</label>
    <type>Text</type>
</CustomField>