unpackaged/main/default/objects/AcctSeed__AP_Aging_History__c/fields/AcctSeed__Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Amount__c</fullName>
    <inlineHelpText>Balance of the account payable for the given accounting period.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>