unpackaged/main/default/objects/AcctSeed__AP_Aging_History__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Accounting_Period__c</columns>
    <columns>AcctSeed__Account_Payable__c</columns>
    <columns>AcctSeed__Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>